[project]
name = "beacon-fever-differential"
version = "1.1.0"
description = "BEACON: Bayesian Evidence-Adjusted Clinical Outbreak Navigator"
readme = "README.md"
license = "CC-BY-4.0"
requires-python = ">=3.10"
authors = [
    { name = "Hayden Farquhar", email = "hayden.farquhar@icloud.com" },
]
dependencies = [
    "numpy>=1.26",
    "pyyaml>=6.0",
    "streamlit>=1.32",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.poetry]
package-mode = false
